<resources>
    <string name="AppTools">App Info:</string>
    <string name="P_not_found">Error: Program files could not be found!\nCheck the dalvik-cache location to solve this problem!\nDefault: /data/dalvik-cache/*</string>
    <string name="PatchResult">Patch results</string>
    <string name="Yes">Yes</string>
    <string name="about_working_dir">Working directory on SD Card:</string>
    <string name="aboutlp">Lucky Patcher is a universal patching tool. It is intended to modify applications in the following ways: Remove ads, Remove Google license verification (Automatically and manually), Manage permissions, and more.</string>
    <string name="aboutmenu">About</string>
    <string name="abouttitle">About Lucky Patcher by ChelpuS</string>
    <string name="activity_ads_descr">App&apos;s Activity is Used for Advertising.</string>
    <string name="activity_descr">App&apos;s Activity. Description Unavailable.</string>
    <string name="additinfo">Additional Info:</string>
    <string name="adsdescr">Show all apps with Google Ads.</string>
    <string name="adstitle">Apps with ads</string>
    <string name="advanced_menu">Open Menu of Patches</string>
    <string name="all_custom_patches_updated">All custom patches were updated</string>
    <string name="allchanges">All changes were fixed in ODEX and will persist until the application is reinstalled!</string>
    <string name="apk_create_option">Filename for Recompiled APKs</string>
    <string name="apk_not_found_error">Error: APK file could not be found.</string>
    <string name="apk_size">APK size:</string>
    <string name="apkdescr">Naming scheme for new APK files.</string>
    <string name="apklabel">Based on App&apos;s Label</string>
    <string name="apkpackage">Based on App&apos;s Package Name</string>
    <string name="app_dialog_no_root_app_control">Manage the app</string>
    <string name="app_info">App Info</string>
    <string name="app_install_success">Application has been successfully installed.</string>
    <string name="app_name">Lucky Patcher</string>
    <string name="app_not_found">App could not be found! Please install the application and try again.</string>
    <string name="back">Back</string>
    <string name="backbutton">Backup</string>
    <string name="backup_data_empty">App Data is empty. There is nothing to backup.</string>
    <string name="backup_data_error">Error: Something went wrong. The backup is most likely incomplete.</string>
    <string name="backup_data_success">Settings have been successfully saved.</string>
    <string name="backup_delete_message">Do you really want to delete this backup?</string>
    <string name="backup_done">Backup succeeded. Path:\n</string>
    <string name="backups_not_found">No backup files were found in:</string>
    <string name="begin_changelog">Installed version is:</string>
    <string name="billing_buy">Do you want to try to get this item for free?</string>
    <string name="billing_hack">Author and programmer is dschuermann (Dominik)\n</string>
    <string name="billing_hack2_auto_repeat_note">To disable auto-repeat you must select app and go to &quot;Tools&quot;-&gt;&quot;Remove selected saved purchases&quot; and delete item.</string>
    <string name="billing_hack2_new">- For the best results you must make a patch to Android &quot;Signature Verification status always True&quot;;\n- To disable the hack go to &quot;Switches&quot; on the bottom panel Lucky Patcher and choose &quot;Disable Google Billing Emulation&quot;.</string>
    <string name="billing_hack_menu">Google Billing Emulation</string>
    <string name="billing_hack_menu_descr">Requires &quot;Support patch for InApp and LVL&quot; to target Application and applied &quot;Patch to Android&quot;. Use custom patch &quot;Support.InApp.LVL...&quot; for Google Play for right purchase information and price within the application.</string>
    <string name="billing_hack_menu_disable">Disable Google Billing Emulation</string>
    <string name="billing_hack_menu_enable">Enable Google Billing Emulation</string>
    <string name="billing_hack_option">Send a reply to the application unsigned (this may work for non-root users)</string>
    <string name="billing_hack_option2">Save purchase for restore</string>
    <string name="bind_button">Add new Directory Bind!</string>
    <string name="bind_delete">Do you want to remove this directory bind?</string>
    <string name="bind_dialog_button">Bind Directory</string>
    <string name="bind_dialog_source">Directory with Data:</string>
    <string name="bind_dialog_target">Mount directory with data to:</string>
    <string name="bind_error">Binding failed! Data directory could not be found on device.</string>
    <string name="bind_source">Directory with Data:</string>
    <string name="bind_target">Mount Data to:</string>
    <string name="binder_browser">Browser</string>
    <string name="binder_browser_create_dir">Create directory</string>
    <string name="binder_browser_current_dir">Current directory:</string>
    <string name="binder_browser_select">Select current directory</string>
    <string name="binder_delete">Delete</string>
    <string name="bootview">Bootlist</string>
    <string name="busybox_not_found">Warning: Busybox could not be found. Lucky Patcher cannot continue without Busybox...</string>
    <string name="button_advanced_filter">Filters</string>
    <string name="button_for_delete">Delete</string>
    <string name="button_move_to_sdcard">Move to SD Card</string>
    <string name="cancel">Cancel</string>
    <string name="change_icon_lp">Change Icon</string>
    <string name="change_icon_lp_descr">You can change the default icon for Lucky Patcher in your launcher.</string>
    <string name="changelog">Changelog</string>
    <string name="cleardalvik">Clear Dalvik-cache and Reboot</string>
    <string name="cleardata">Clear Data</string>
    <string name="cloneApplication">Clone application (It work not for all)</string>
    <string name="collect_logs">Collecting logs...</string>
    <string name="context_automodeslvl">Auto Modes</string>
    <string name="context_backup_apk">Backup .apk file</string>
    <string name="context_backup_data">Backup App settings</string>
    <string name="context_batch_operations">Batch operations</string>
    <string name="context_blockads">Block Ads on Device</string>
    <string name="context_change_components_menu">Change The App&apos;s Components</string>
    <string name="context_clearhosts">Clear The Local &apos;hosts&apos; File</string>
    <string name="context_crt_apk_permission">APK with changed Permissions and Activities</string>
    <string name="customdescr">Shows all apps with a custom patch applied.</string>
    <string name="customtitle">Custom-patched apps</string>
    <string name="days_on_up">Show New Apps First</string>
    <string name="days_on_up_descr">Set the maximum number of days old that an application can be while still being considered new. Set to 0 days if you want to disable the movement of recently installed applications to the top of the list.</string>
    <string name="dir_change">Change Directory</string>
    <string name="dir_change_descr">Change the directory on the SD Card where Lucky Patcher will store its files. The default path is\n/mnt/sdcard/Android/data/com.android.vending.billing.InAppBillingService.LOCK/files/LuckyPatcher</string>
    <string name="disable_autoupdate">Disable Auto-update</string>
    <string name="disable_autoupdate_descr">Check to disable automatic updates.</string>
    <string name="dontusepatch">Cancel</string>
    <string name="fast_start">Faster Launch</string>
    <string name="fast_start_descr">Disables the loading of icons from Lucky Patcher&apos;s database. This makes the application list laggy...</string>
    <string name="filter">Filter</string>
    <string name="filter0">New and updated Apps</string>
    <string name="filter1">Apps with LVL</string>
    <string name="filter10">Disabled (frozen) Apps</string>
    <string name="filter11">Apps with custom patch</string>
    <string name="filter12">Apps with modified flag</string>
    <string name="filter13">Odexed Apps</string>
    <string name="filter2">Apps with ADS</string>
    <string name="filter4">Apps with InApp Google</string>
    <string name="filter5">Apps on device memory</string>
    <string name="filter6">Apps on SD Card</string>
    <string name="filter7">System Apps</string>
    <string name="filter8">System Apps with updates</string>
    <string name="filter9">Apps with SEND_SMS and CALL_PHONE permissions</string>
    <string name="filterdescr">Select the categories to show.</string>
    <string name="fixbutton">Fix changes</string>
    <string name="fixeddescr">Show all apps with fixed changes (Yellow star mark).</string>
    <string name="fixedtitle">Apps with fixes in ODEX</string>
    <string name="help">Help</string>
    <string name="hide_notify">Hide Notifications</string>
    <string name="hide_notify_descr">Hides Lucky Patcher notifications.</string>
    <string name="hide_title_app">Hide The Title</string>
    <string name="hide_title_app_descr">Hides Lucky Patcher&apos;s title in the list of applications. Works only on devices with a hardware menu button.</string>
    <string name="inapp_emulation_auto_repeat">Auto-repeat purchases with the current settings</string>
    <string name="langmenu">Language</string>
    <string name="launchbutton">Launch</string>
    <string name="lp_billing_hack_title">InApp purchases hack...</string>
    <string name="lvldescr">Show all apps with License Verification.</string>
    <string name="lvltitle">Apps with LVL</string>
    <string name="modifdescr">Show all modified apps (Green clover mark).</string>
    <string name="modiftitle">Modified apps</string>
    <string name="no">No</string>
    <string name="no_icon">Remove App Icons</string>
    <string name="no_icon_descr">Removes all application icons in the list. This reduces operational overhead which is useful for low-end devices.</string>
    <string name="nofilter">None</string>
    <string name="nonedescr">Shows all apps in which nothing was found.</string>
    <string name="nonetitle">Nothing found</string>
    <string name="orientmenu">Orientation</string>
    <string name="others">Other</string>
    <string name="patchbutton">Patch</string>
    <string name="restorebutton">Restore</string>
    <string name="savebutton">Save as a Custom Patch</string>
    <string name="select_filter">Please select filter for App list:</string>
    <string name="sendlog">Send Log</string>
    <string name="setting_confirm_exit">Confirm exit from the app</string>
    <string name="setting_confirm_exit_descr">If you press back, Lucky Patcher ask for confirmation to exit.</string>
    <string name="settings_force_root">Force set root check</string>
    <string name="settings_force_root_description">If you have exotic root, you can force set root to root or non-root.</string>
    <string name="sortbyname">Sort by Name</string>
    <string name="sortbystatus">Sort by Status</string>
    <string name="sortbytime">Sort by Install Date</string>
    <string name="sortmenu">Sort Order</string>
    <string name="sysdescr">Warning! Please make a *BACKUP* before modifying.</string>
    <string name="systitle">Show system apps</string>
    <string name="text_size">Text Size</string>
    <string name="update">Update</string>
    <string name="usepatch">Apply</string>
    <string name="vibration">Enable Vibration</string>
    <string name="vibration_descr">Enable haptic feedback in the application list.</string>
    <string name="viewlandscape">Landscape</string>
    <string name="viewlarge">Large font</string>
    <string name="viewmedium">Medium font</string>
    <string name="viewmenu">View</string>
    <string name="viewportret">Portrait</string>
    <string name="viewsensor">Sensor</string>
    <string name="viewsmall">Small font</string>
</resources>