<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:id="@+id/filterbodyscroll" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:id="@+id/appdialogbody" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18dp" android:id="@+id/app_textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/select_filter" android:layout_alignParentTop="true" />
            <RadioGroup android:id="@+id/radioGroup1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_alignParentLeft="true">
                <RadioButton android:id="@+id/nofilter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/nofilter" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter0" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter1" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter2" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter11" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter12" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter13" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter4" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter5" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter6" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter10" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter7" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter8" android:drawablePadding="8dp" />
                <RadioButton android:id="@+id/filter9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/filter9" android:drawablePadding="8dp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <Button android:id="@+id/ok_button" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="10dp" android:layout_marginRight="2dp" android:minWidth="120dp" android:text="@string/usepatch" android:layout_weight="0.0" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
        <Button android:id="@+id/cancel_button" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="10dp" android:layout_marginRight="2dp" android:minWidth="120dp" android:text="@string/dontusepatch" android:layout_weight="0.0" android:layout_alignParentBottom="true" />
    </LinearLayout>
</LinearLayout>
