<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingLeft="30dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RadioGroup android:id="@+id/radioGroupView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_alignParentLeft="true">
        <RadioButton android:id="@+id/radioSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:checked="true" android:text="@string/viewsmall" android:drawablePadding="8dp" />
        <RadioButton android:id="@+id/radioMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/viewmedium" android:drawablePadding="8dp" />
        <RadioButton android:id="@+id/radioLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/viewlarge" android:drawablePadding="8dp" />
    </RadioGroup>
</LinearLayout>
